--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 <body>
   <a-scene
     embedded
-    arjs="sourceType: webcam; debugUIEnabled: false;"
+    arjs="sourceType: webcam; debugUIEnabled: true;"
     vr-mode-ui="enabled: false">
 
-    <a-marker type="pattern" url="marker.patt">
+    <a-marker preset="hiro">
       <a-entity
         gltf-model="model.glb"
-        scale="2 2 2"
-        position="0 0 0">
+        scale="10 10 10"
+        position="0 0.5 0"
+        rotation="-90 0 0">
       </a-entity>
     </a-marker>
 
