--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 <body>
   <a-scene
     embedded
-    arjs="sourceType: webcam; debugUIEnabled: true;"
+    arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: true;"
     vr-mode-ui="enabled: false">
 
+    <a-entity light="type: ambient; intensity: 1.2"></a-entity>
+    <a-entity light="type: directional; intensity: 0.8" position="1 2 1"></a-entity>
+
     <a-marker preset="hiro">
-      <a-entity
-        gltf-model="model.glb"
-        scale="10 10 10"
-        position="0 0.5 0"
-        rotation="-90 0 0">
-      </a-entity>
+      <a-box color="red" scale="1 1 1"></a-box>
     </a-marker>
 
     <a-entity camera></a-entity>
