--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
     arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: true;"
     vr-mode-ui="enabled: false">
 
+    <!-- Lighting (critical for GLB visibility) -->
     <a-entity light="type: ambient; intensity: 1.2"></a-entity>
     <a-entity light="type: directional; intensity: 0.8" position="1 2 1"></a-entity>
 
+    <!-- Marker -->
     <a-marker preset="hiro">
-      <a-box color="red" scale="1 1 1"></a-box>
+      <a-entity
+        gltf-model="model.glb"
+        scale="10 10 10"
+        position="0 0.5 0"
+        rotation="-90 0 0">
+      </a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
