--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     vr-mode-ui="enabled: false">
 
     <a-entity light="type: ambient; intensity: 1.2"></a-entity>
-    <a-entity light="type: directional; intensity: 0.8" position="1 2 1"></a-entity>
+    <a-entity light="type: directional; intensity: 0.8" position="1 1 1"></a-entity>
 
     <a-marker preset="hiro">
-      <a-box color="red" scale="1 1 1"></a-box>
+      <a-box color="red" scale=".5 1 1.75"></a-box>
     </a-marker>
 
     <a-entity camera></a-entity>
