--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a-entity light="type: directional; intensity: 0.8" position="0 0 0"></a-entity>
 
     <a-marker preset="hiro">
-      <a-box color="blue" scale="1 1 1"></a-box>
+      <a-box color="blue" scale=".2 .2 .2"></a-box>
     </a-marker>
 
     <a-entity camera></a-entity>
