--- a/index.html
+++ b/index.html
@@ -1,14 +1,52 @@
-<model-viewer 
-    src="212.glb" 
-    ios-src="212.usdz"
-    ar 
-    ar-modes="webxr scene-viewer quick-look" 
-    camera-controls 
-    shadow-intensity="1" 
-    auto-rotate
-    touch-action="pan-y">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>212 Model AR</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
     
-    <button slot="ar-button" style="background-color: white; border-radius: 8px; border: none; position: absolute; top: 16px; right: 16px; padding: 10px;">
-      👋 View in AR
-    </button>
-</model-viewer>
+    <style>
+        body { margin: 0; background-color: #f0f0f0; }
+        model-viewer {
+            width: 100vw;
+            height: 100vh;
+            --poster-color: transparent;
+        }
+        /* Custom AR Button */
+        #ar-button {
+            background-color: #007bff;
+            border-radius: 50px;
+            border: none;
+            position: absolute;
+            bottom: 40px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 15px 30px;
+            color: white;
+            font-weight: bold;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            z-index: 999;
+        }
+    </style>
+</head>
+<body>
+
+    <model-viewer 
+        src="212.glb" 
+        ios-src="212.usdz"
+        ar 
+        ar-modes="webxr scene-viewer quick-look" 
+        camera-controls 
+        shadow-intensity="1" 
+        auto-rotate
+        touch-action="pan-y">
+        
+        <button slot="ar-button" id="ar-button">
+            🚀 PLACE IN YOUR SPACE
+        </button>
+
+    </model-viewer>
+
+</body>
+</html>
