--- a/index.html
+++ b/index.html
@@ -1,52 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>212 Model AR</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
-    
+    <title>212 AR - iOS Only</title>
     <style>
-        body { margin: 0; background-color: #f0f0f0; }
-        model-viewer {
-            width: 100vw;
-            height: 100vh;
-            --poster-color: transparent;
+        body { 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            height: 100vh; 
+            margin: 0; 
+            background-color: #f2f2f7;
+            font-family: -apple-system, sans-serif;
         }
-        /* Custom AR Button */
-        #ar-button {
-            background-color: #007bff;
-            border-radius: 50px;
-            border: none;
-            position: absolute;
-            bottom: 40px;
-            left: 50%;
-            transform: translateX(-50%);
-            padding: 15px 30px;
-            color: white;
-            font-weight: bold;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-            z-index: 999;
+        /* Style for the tappable preview */
+        .ar-link {
+            text-decoration: none;
+            text-align: center;
+        }
+        .ar-link img {
+            width: 250px;
+            height: 250px;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            border: 1px solid #ddd;
+        }
+        .instruction {
+            margin-top: 15px;
+            color: #8e8e93;
+            font-size: 14px;
         }
     </style>
 </head>
 <body>
 
-    <model-viewer 
-        src="212.glb" 
-        ios-src="212.usdz"
-        ar 
-        ar-modes="webxr scene-viewer quick-look" 
-        camera-controls 
-        shadow-intensity="1" 
-        auto-rotate
-        touch-action="pan-y">
-        
-        <button slot="ar-button" id="ar-button">
-            🚀 PLACE IN YOUR SPACE
-        </button>
-
-    </model-viewer>
+    <a rel="ar" href="212.usdz" class="ar-link">
+        <img src="preview-image.jpg" alt="Tap to view 212 in AR">
+        <div class="instruction">Tap to view in your room</div>
+    </a>
 
 </body>
 </html>
