--- a/index.html
+++ b/index.html
@@ -13,6 +13,41 @@
         height: 100vh;
         background-color: #eeeeee;
       }
+
+      /* Basic Hotspot Styling */
+      .Hotspot {
+        background: #fff;
+        border-radius: 32px;
+        border: 0;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+        box-sizing: border-box;
+        cursor: pointer;
+        height: 24px;
+        padding: 8px;
+        position: relative;
+        transition: opacity 0.3s;
+        width: 24px;
+      }
+
+      .HotspotAnnotation {
+        background: #fff;
+        border-radius: 4px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+        color: rgba(0, 0, 0, 0.8);
+        display: block;
+        font-family: Futura, Helvetica Neue, sans-serif;
+        font-size: 14px;
+        font-weight: 700;
+        left: calc(100% + 12px);
+        max-width: 128px;
+        overflow-wrap: break-word;
+        padding: 0.5em 1em;
+        position: absolute;
+        top: 50%;
+        width: max-content;
+        transform: translateY(-50%);
+      }
+
       #ar-button {
         background-color: #ffffff;
         border-radius: 8px;
@@ -24,6 +59,7 @@
         transform: translateX(-50%);
         font-weight: bold;
         box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        z-index: 10;
       }
     </style>
   </head>
@@ -37,8 +73,26 @@
       camera-controls 
       touch-action="pan-y"
       shadow-intensity="1"
+      tone-mapping="neutral"
+      environment-image="aircraft_workshop_01_1k.hdr"
       auto-rotate>
       
+      <button class="Hotspot" slot="hotspot-1" data-position="-0.13155839312821627m 0.0376686826955816m -0.6519733882664832m" data-normal="-1m 0m 0m" data-visibility-attribute="visible">
+          <div class="HotspotAnnotation">Engine</div>
+      </button>
+
+      <button class="Hotspot" slot="hotspot-2" data-position="0.24329702029745348m 0.7251689785843767m -0.3787829279899597m" data-normal="0m 0m 1m" data-visibility-attribute="visible">
+          <div class="HotspotAnnotation">Controls</div>
+      </button>
+
+      <button class="Hotspot" slot="hotspot-3" data-position="-0.011832628759229247m 0.679622714407742m 0.332448877077804m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
+          <div class="HotspotAnnotation">Main Deck</div>
+      </button>
+
+      <button class="Hotspot" slot="hotspot-5" data-position="0.1324610209327211m 0.03764510645109026m -0.4058360906218339m" data-normal="0.9987297742578406m -0.03077976992658189m 0.039892903806939564m" data-visibility-attribute="visible">
+          <div class="HotspotAnnotation">Main Drive</div>
+      </button>
+
       <button slot="ar-button" id="ar-button">
         👋 VIEW IN YOUR SPACE
       </button>
