--- a/index.html
+++ b/index.html
@@ -14,39 +14,38 @@
         background-color: #eeeeee;
       }
 
-      /* Basic Hotspot Styling */
+      /* This makes the hotspot dots visible */
       .Hotspot {
-        background: #fff;
-        border-radius: 32px;
-        border: 0;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-        box-sizing: border-box;
+        background: #4285f4; /* Bright Blue */
+        border-radius: 50%;
+        border: 2px solid #ffffff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         cursor: pointer;
-        height: 24px;
-        padding: 8px;
-        position: relative;
-        transition: opacity 0.3s;
-        width: 24px;
+        height: 20px;
+        width: 20px;
+        padding: 0;
+        display: block; /* Ensures it isn't hidden */
       }
 
+      /* This makes the labels visible */
       .HotspotAnnotation {
-        background: #fff;
+        background: #ffffff;
         border-radius: 4px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-        color: rgba(0, 0, 0, 0.8);
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        color: #000000;
         display: block;
-        font-family: Futura, Helvetica Neue, sans-serif;
-        font-size: 14px;
-        font-weight: 700;
-        left: calc(100% + 12px);
-        max-width: 128px;
-        overflow-wrap: break-word;
-        padding: 0.5em 1em;
+        font-size: 12px;
+        font-weight: bold;
+        padding: 4px 8px;
         position: absolute;
-        top: 50%;
-        width: max-content;
-        transform: translateY(-50%);
+        top: 25px; /* Positions label below the dot */
+        left: 50%;
+        transform: translateX(-50%);
+        white-space: nowrap;
       }
+
+      /* Hide labels by default if you want a cleaner look, 
+         but for testing, we keep them 'block' */
 
       #ar-button {
         background-color: #ffffff;
@@ -58,7 +57,6 @@
         left: 50%;
         transform: translateX(-50%);
         font-weight: bold;
-        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
         z-index: 10;
       }
     </style>
@@ -74,22 +72,22 @@
       touch-action="pan-y"
       shadow-intensity="1"
       tone-mapping="neutral"
-      environment-image="aircraft_workshop_01_1k.hdr"
-      auto-rotate>
+      auto-rotate
+      min-hotspot-opacity="0.5">
       
-      <button class="Hotspot" slot="hotspot-1" data-position="-0.13155839312821627m 0.0376686826955816m -0.6519733882664832m" data-normal="-1m 0m 0m" data-visibility-attribute="visible">
+      <button class="Hotspot" slot="hotspot-1" data-position="-0.13155839312821627m 0.0376686826955816m -0.6519733882664832m" data-normal="-1m 0m 0m">
           <div class="HotspotAnnotation">Engine</div>
       </button>
 
-      <button class="Hotspot" slot="hotspot-2" data-position="0.24329702029745348m 0.7251689785843767m -0.3787829279899597m" data-normal="0m 0m 1m" data-visibility-attribute="visible">
+      <button class="Hotspot" slot="hotspot-2" data-position="0.24329702029745348m 0.7251689785843767m -0.3787829279899597m" data-normal="0m 0m 1m">
           <div class="HotspotAnnotation">Controls</div>
       </button>
 
-      <button class="Hotspot" slot="hotspot-3" data-position="-0.011832628759229247m 0.679622714407742m 0.332448877077804m" data-normal="0m 1m 0m" data-visibility-attribute="visible">
+      <button class="Hotspot" slot="hotspot-3" data-position="-0.011832628759229247m 0.679622714407742m 0.332448877077804m" data-normal="0m 1m 0m">
           <div class="HotspotAnnotation">Main Deck</div>
       </button>
 
-      <button class="Hotspot" slot="hotspot-5" data-position="0.1324610209327211m 0.03764510645109026m -0.4058360906218339m" data-normal="0.9987297742578406m -0.03077976992658189m 0.039892903806939564m" data-visibility-attribute="visible">
+      <button class="Hotspot" slot="hotspot-5" data-position="0.1324610209327211m 0.03764510645109026m -0.4058360906218339m" data-normal="0.9987297742578406m -0.03077976992658189m 0.039892903806939564m">
           <div class="HotspotAnnotation">Main Drive</div>
       </button>
 
