--- a/index.html
+++ b/index.html
@@ -17,54 +17,59 @@
 
       /* Logo Header Styling */
       .header {
-        padding: 10px;
+        padding: 15px;
         display: flex;
         justify-content: center;
         background: white;
-        border-bottom: 1px solid #ddd;
+        border-bottom: 2px solid #00837d; /* YunExpress Teal */
       }
       .header img {
-        height: 50px; /* Adjust size as needed */
+        height: 60px; 
         width: auto;
       }
 
       model-viewer {
-        flex-grow: 1; /* Takes up remaining vertical space */
+        flex-grow: 1;
         width: 100%;
         background-color: #eeeeee;
       }
 
-      /* Hotspot Styling */
+      /* Hotspot Styling - Using YunExpress Teal */
       .Hotspot {
-        background: #4285f4;
+        background: #00837d; 
         border-radius: 50%;
         border: 2px solid #ffffff;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         cursor: pointer;
-        height: 20px;
-        width: 20px;
+        height: 22px;
+        width: 22px;
         padding: 0;
       }
 
-      /* Hotspot Annotation (Hidden by default) */
+      /* Selected/Clicked State - Using YunExpress Yellow */
+      .Hotspot.selected {
+        background: #f8a51b; 
+        outline: none;
+      }
+
       .HotspotAnnotation {
         display: none; 
         background: #ffffff;
         border-radius: 4px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-        color: #000000;
+        color: #333;
         font-size: 14px;
         font-weight: bold;
         padding: 8px 12px;
         position: absolute;
-        top: 30px;
+        top: 32px;
         left: 50%;
         transform: translateX(-50%);
         white-space: nowrap;
         pointer-events: none;
+        border-top: 3px solid #00837d;
       }
 
-      /* Class to show annotation when active */
       .Hotspot.selected .HotspotAnnotation {
         display: block;
       }
@@ -72,13 +77,14 @@
       #ar-button {
         background-color: #ffffff;
         border-radius: 8px;
-        border: 1px solid #ccc;
+        border: 1px solid #00837d;
         padding: 12px 20px;
         position: absolute;
         bottom: 30px;
         left: 50%;
         transform: translateX(-50%);
         font-weight: bold;
+        color: #00837d;
         z-index: 10;
       }
     </style>
@@ -86,11 +92,11 @@
   <body>
 
     <header class="header">
-      <img src="_logo.jpeg" alt="YunExpress Logo">
+      <img src="logo.jpeg" alt="YunExpress Logo">
     </header>
 
     <model-viewer 
-      src="212.glb" 
+      src="model.glb" 
       ios-src="212.usdz"
       ar 
       ar-modes="webxr scene-viewer quick-look" 
@@ -125,13 +131,9 @@
 
     <script>
       const hotspots = document.querySelectorAll('.Hotspot');
-      
       hotspots.forEach((hotspot) => {
         hotspot.addEventListener('click', () => {
-          // Toggle the 'selected' class on click
           hotspot.classList.toggle('selected');
-          
-          // Optional: Close other hotspots when one is opened
           hotspots.forEach(h => { if(h !== hotspot) h.classList.remove('selected'); });
         });
       });
