--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="HotspotAnnotation">Engine</div>
       </button>
 
-      <button slot="ar-button" id="ar-button">👋 VIEW IN YOUR SPACE</button>
+      <button slot="ar-button" id="ar-button">View Model</button>
     </model-viewer>
 
     <script>
