--- a/index.html
+++ b/index.html
@@ -1,73 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>YunExpress iOS Asset Viewer</title>
+    <title>YunExpress AR Viewer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        :root { --brand-color: #00837d; }
-        body { 
-            margin: 0; 
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
-            display: flex; 
-            flex-direction: column; 
-            align-items: center; 
+        :root {
+            --yun-green: #00837d;
+            --ios-gray: #f2f2f7;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            background-color: var(--ios-gray);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             justify-content: center;
-            height: 100vh; 
-            background-color: #f5f5f7; 
+            height: 100vh;
+            color: #1c1c1e;
         }
 
-        .container {
-            text-align: center;
-            padding: 20px;
+        .card {
             background: white;
+            padding: 30px;
             border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+            box-shadow: 0 10px 25px rgba(0,0,0,0.05);
             width: 85%;
-            max-width: 400px;
+            max-width: 350px;
+            text-align: center;
         }
 
-        .logo { height: 50px; margin-bottom: 20px; }
+        .logo {
+            height: 45px;
+            margin-bottom: 25px;
+        }
 
-        h2 { color: #333; font-size: 1.2rem; margin-bottom: 20px; }
+        h1 {
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+
+        p {
+            font-size: 14px;
+            color: #8e8e93;
+            margin-bottom: 25px;
+        }
 
         select {
             width: 100%;
-            padding: 15px;
-            border: 2px solid var(--brand-color);
-            border-radius: 12px;
+            padding: 12px;
             font-size: 16px;
-            margin-bottom: 25px;
-            background: white;
-            -webkit-appearance: none; /* Safari styling */
+            border: 2px solid #e5e5ea;
+            border-radius: 10px;
+            margin-bottom: 30px;
+            background: #fff;
+            outline: none;
         }
 
-        .view-btn {
+        /* The AR Link must look like a button but act like a link */
+        #ar-link {
             display: inline-block;
-            background-color: var(--brand-color);
-            color: white;
-            padding: 18px 30px;
-            border-radius: 14px;
             text-decoration: none;
-            font-weight: bold;
-            font-size: 18px;
-            transition: transform 0.2s ease;
+            background-color: var(--yun-green);
+            color: white;
+            padding: 16px 32px;
+            border-radius: 12px;
+            font-weight: 600;
+            font-size: 17px;
+            transition: transform 0.1s ease;
         }
 
-        .view-btn:active { transform: scale(0.95); }
+        #ar-link:active {
+            transform: scale(0.96);
+            opacity: 0.9;
+        }
 
-        .ios-only-note {
+        /* CRITICAL: The img must exist inside the rel="ar" link. 
+           We make it invisible but it MUST be present for iOS to trigger.
+        */
+        #ar-link img {
+            width: 1px;
+            height: 1px;
+            opacity: 0.01;
+            position: absolute;
+        }
+
+        .footer-note {
             margin-top: 20px;
-            font-size: 12px;
-            color: #888;
+            font-size: 11px;
+            color: #aeaeb2;
         }
     </style>
 </head>
 <body>
 
-    <div class="container">
+    <div class="card">
         <img src="logo.jpeg" alt="YunExpress" class="logo">
-        <h2>3D Asset Preview</h2>
+        <h1>3D Asset Preview</h1>
+        <p>Select a model to view in your space.</p>
 
         <select id="model-select">
             <option value="212.usdz">Aircraft Loader</option>
@@ -77,29 +110,35 @@
         </select>
 
         <a id="ar-link" rel="ar" href="212.usdz">
-            <img id="preview-img" src="loader-thumb.jpg" style="display:none;">
-            <span class="view-btn">OPEN IN 3D VIEW</span>
+            <img src="logo.jpeg"> VIEW IN AR
         </a>
 
-        <p class="ios-only-note">Note: This viewer is optimized for iPhone/iPad.</p>
+        <div class="footer-note">Designed for iPhone & iPad</div>
     </div>
 
     <script>
-        const modelSelect = document.querySelector('#model-select');
-        const arLink = document.querySelector('#ar-link');
+        const modelSelect = document.getElementById('model-select');
+        const arLink = document.getElementById('ar-link');
 
-        modelSelect.addEventListener('change', (event) => {
-            // Update the link href to the selected USDZ file
-            arLink.href = event.target.value;
+        modelSelect.addEventListener('change', () => {
+            // Update the link destination based on selection
+            arLink.href = modelSelect.value;
         });
 
-        // Basic check to alert non-iOS users
-        const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
-        if (!isIOS) {
-            document.querySelector('h2').innerText = "iOS Device Required for Preview";
-            document.querySelector('.view-btn').style.backgroundColor = "#ccc";
-            document.querySelector('.view-btn').style.pointerEvents = "none";
-        }
+        // Optional: Auto-trigger AR on selection change
+        // modelSelect.addEventListener('change', () => {
+        //     arLink.click();
+        // });
+
+        // Simple check to warn users not on iOS
+        window.addEventListener('load', () => {
+            const isIOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
+            if (!isIOS) {
+                document.querySelector('p').innerHTML = "⚠️ <strong>iOS device required</strong> for AR preview.";
+                arLink.style.backgroundColor = "#aeaeb2";
+                arLink.style.pointerEvents = "none";
+            }
+        });
     </script>
 
 </body>
