--- a/index.html
+++ b/index.html
@@ -218,9 +218,10 @@
                   ar-modes="webxr scene-viewer quick-look" 
                   camera-controls 
                   auto-rotate 
-                  shadow-intensity="1.5" 
+                  shadow-intensity="1" 
+                  shadow-softness="1"
                   environment-image="neutral" 
-                  exposure="1.2"
+                  exposure="0.8"
                   camera-orbit="45deg 75deg 105%"
                   interaction-prompt="none">
         <button slot="ar-button" id="ar-button">Deploy USDZ to Workspace</button>
